--- a/myProjects.html
+++ b/myProjects.html
@@ -31,10 +31,10 @@
                 <div class="card">
                     <div class="innerCard">
                         <div class="frontCard">
-                            <a href="hayden/accesible.html"><h2>Goldenboom Consultancy Firm</h2><p>(Click me!)</p></a>
+                            <a href="accesible.html"><h2>Goldenboom Consultancy Firm</h2><p>(Click me!)</p></a>
                         </div>
                         <div class="backCard">
-                            <a href="hayden/accesible.html" target="_blank" rel="noopener noreferrer"><img src="hayden/images/goldenboom.png" alt="a screenshot of a website"></a>
+                            <a href="accesible.html" target="_blank" rel="noopener noreferrer"><img src="hayden/images/goldenboom.png" alt="a screenshot of a website"></a>
                         </div>
                     </div>
                 </div>
