--- a/myProjects.html
+++ b/myProjects.html
@@ -34,7 +34,7 @@
                             <a href="accesible.html"><h2>Goldenboom Consultancy Firm</h2><p>(Click me!)</p></a>
                         </div>
                         <div class="backCard">
-                            <a href="accesible.html" target="_blank" rel="noopener noreferrer"><img src="hayden/images/goldenboom.png" alt="a screenshot of a website"></a>
+                            <a href="accesible.html" target="_blank" rel="noopener noreferrer"><img src="imagesH/goldenboom.png" alt="a screenshot of a website"></a>
                         </div>
                     </div>
                 </div>
