--- a/accesible.html
+++ b/accesible.html
@@ -16,7 +16,7 @@
 		<div id ="container">		
 			<header>
 				<div id="headingrow1" class = "headingrow1">
-					<img class="logo" src="images/logo1.jpg" alt="Logo of GoldenBoom Fashion Store">
+					<img class="logo" src="imagesH/logo1.jpg" alt="Logo of GoldenBoom Fashion Store">
 					<nav>
 						<ul class = "firstRow">
 							<li><a href="#">Log in</a></li>
@@ -76,7 +76,7 @@
 						</nav>
 						<div id = "aside2">
 						<hr >
-							<p><img class ="goldenboomlogo" src='images/logo1.jpg'  alt="Logo of GoldenBoom Consultancy Firm">We are dedicated to empowering businesses and individuals to reach their full potential. Let us help you unlock new opportunities and drive success.</p>
+							<p><img class ="goldenboomlogo" src='imagesH/logo1.jpg'  alt="Logo of GoldenBoom Consultancy Firm">We are dedicated to empowering businesses and individuals to reach their full potential. Let us help you unlock new opportunities and drive success.</p>
 						</div>
 					</aside>
 					<div id="content">
@@ -97,7 +97,7 @@
 								</ul>
 							</div>
 							<div id="aside5">
-								<p><img class="image3" src="images/rover.jpg" alt="picture of a rover">Our team of experienced consultants brings industry expertise and a commitment to excellence, ensuring that every project is approached with professionalism and insight.</p>
+								<p><img class="image3" src="imagesH/rover.jpg" alt="picture of a rover">Our team of experienced consultants brings industry expertise and a commitment to excellence, ensuring that every project is approached with professionalism and insight.</p>
 							</div>
 						</div>
 					</div>
