--- a/myProjects.html
+++ b/myProjects.html
@@ -1,5 +1,4 @@
 <!--
-
     Project 1
     Name: Adewumi Tosin 
     Date: 10th October, 2024
@@ -41,20 +40,20 @@
                 <div class="card">
                     <div class="innerCard">
                         <div class="frontCard">
-                            <a href="commercial/p3form.html"><h2>Fashion Store Order Form</h2><p>(Click me!)</p></a>
+                            <a href="p3form.html"><h2>Fashion Store Order Form</h2><p>(Click me!)</p></a>
                         </div>
                         <div class="backCard">
-                            <a href="commercial/p3form.html" target="_blank" rel="noopener noreferrer"><img src="images/sc.png" alt="a screenshot of a website"></a>
+                            <a href="p3form.html" target="_blank" rel="noopener noreferrer"><img src="images/sc.png" alt="a screenshot of a website"></a>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="innerCard">
                         <div class="frontCard">
-                            <a href="calculator/15/cal.html"><h2>Payroll Calculator</h2><p>(Click me!)</p></a>
+                            <a href="cal.html"><h2>Payroll Calculator</h2><p>(Click me!)</p></a>
                         </div>
                         <div class="backCard">
-                            <a href="calculator/15/cal.html" target="_blank" rel="noopener noreferrer"><img src="images/cal.png" alt="a screenshot of a website"></a>
+                            <a href="cal.html" target="_blank" rel="noopener noreferrer"><img src="images/cal.png" alt="a screenshot of a website"></a>
                         </div>
                     </div>
                 </div>
