--- a/aboutMe.html
+++ b/aboutMe.html
@@ -30,11 +30,11 @@
             </nav>
             <div id ="box2">
                 <h2>Background</h2>
-                <p>I’ve had quite the journey—from studying English Literature in my undergraduate days to becoming a web developer in the making! As an international student in Canada, I’ve embraced learning and adapting to new environments, finding joy in every challenge and milestone.</p>
+                <p>I’ve had quite the journey—from studying English Literature in my undergraduate days to becoming a web developer in the making! As a blooming tech professional, I've embraced learning and adapting to new environments, finding joy in every challenge and milestone.</p>
             </div>
             <div id ="box3">
                 <h2>My Teaching and Volunteering</h2>
-                <p>With over 8 years of teaching experience, I’ve mastered the art of breaking down complex ideas—an invaluable skill in tech. I’ve volunteered at tech workshops and once served as a judge at a UNESCO-recognized spelling competition. Through these experiences, I’ve discovered my love for helping others grow, whether it’s by mentoring, creating tutorials, or building tech tools that simplify life.</p>
+                <p>With over 8 years of teaching experience, I’ve mastered the art of breaking down complex ideas— an invaluable skill in tech. I’ve volunteered at and attended many tech workshops. Through these experiences, I’ve discovered my love for helping others grow, whether it’s by mentoring, creating tutorials, or building tech tools that simplify life.</p>
             </div>
             <div id ="box">
                 <h2>Personal Interests</h2>
