--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,6 +1,5 @@
 <!--
 
-    Project 1
     Name: Adewumi Tosin 
     Date: 10th October, 2024
     Description:
@@ -10,6 +9,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tosin's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
