--- a/accesible.html
+++ b/accesible.html
@@ -9,6 +9,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>GoldenBoom Consultancy Firm</title>
 		<link rel="stylesheet" href="accstyles.css">
 	</head>
