--- a/cal.html
+++ b/cal.html
@@ -6,6 +6,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="scriptC.js"></script>
 		<link rel="stylesheet" type="text/css" href="stylesC.css" />
 		<meta charset="utf-8" />
