--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!--
-
-    Project 1
     Name: Adewumi Tosin 
     Date: 10th October, 2024
     Description:
-
 -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tosin's Portfolio</title>
         <link rel="stylesheet" href="styles.css">
     </head>
