--- a/myProjects.html
+++ b/myProjects.html
@@ -1,5 +1,4 @@
 <!--
-    Project 1
     Name: Adewumi Tosin 
     Date: 10th October, 2024
     Description:
@@ -8,6 +7,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tosin's Profile Site</title>
     <link rel="stylesheet" href="styles.css">
 </head>
