--- a/p3form.html
+++ b/p3form.html
@@ -1,6 +1,4 @@
 <!--
-
-    Project 3
     Name: Tosin Adewumi
     Date: 19th November, 2024
     Description: Form Vlidation
@@ -9,6 +7,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Boom Fashion Store Order Form</title>
 		<link rel="stylesheet" type="text/css" href="p3formstyles.css" />
 		<link rel="shortcut icon" href="#" />
